<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Authentication.PhoneAuthentication">

    <!-- Back button-->
    <androidx.cardview.widget.CardView
        android:id="@+id/backotpCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:elevation="24dp"
        app:cardCornerRadius="50dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:background="@drawable/round_button_back"
            android:contentDescription="@string/back"
            android:src="@drawable/back_arrow" />

    </androidx.cardview.widget.CardView>

    <!-- Enter your phone number to continue -->
    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="311dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="312dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/enter_your_"
        android:textAppearance="@style/enter_your_"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="136dp" />

    <!--    <com.hbb20.CountryCodePicker-->
    <!--        android:id="@+id/ccp"-->
    <!--        android:layout_width="115dp"-->
    <!--        android:layout_height="43dp"-->
    <!--        android:layout_marginStart="16dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"-->
    <!--        app:layout_constraintHorizontal_bias="0.73"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintVertical_bias="0.332" />-->

    <RelativeLayout
        android:layout_width="60.65dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="388dp"
        android:background="@drawable/phone_auth_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/country_code"
            android:textColor="#43DDE6"
            android:paddingTop="3dp"
            android:textSize="20sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="270.42dp"
        android:layout_height="50dp"
        android:layout_marginStart="88.58dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/phone_auth_border"
        android:ems="10"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/phone_number"
        android:maxLength="10"
        android:inputType="phone"
        android:paddingStart="15.42dp"
        android:paddingTop="3dp"
        android:paddingEnd="15.42dp"
        android:textColor="@color/Blue_Turquoise"
        android:textColorHint="#43DDE6"
        android:textSize="20sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="66dp"
        android:layout_marginEnd="16dp"
        android:elevation="20dp"
        app:cardCornerRadius="50dp">

        <ImageButton
            android:id="@+id/sendOtp"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:background="@drawable/next_btn"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_arrow_1" />

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="101.63dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/waves" />

</RelativeLayout>